--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kadea online</title>
-    <link rel="stylesheet" href="dist/style/stylesheet.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -201,7 +201,7 @@
     </main>
     <footer>
         <div>
-            <img src="/dist/images/KDA-logo.png" alt="logo de Kadea online">
+            <img src="/image/KDA-logo 1.png" alt="logo de Kadea online">
         </div>
         <div>
             <p>
