ajout et stylisation du groupe article

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </section>
         <!--End Hero section -->
         <!--Start Option section -->
-        <div>
+        <div class="groupArticle">
             <article>
                 <div>
                     <h3>Construire une carrière</h3>
