stylisation de la section begincode et startlearn en utilisant les flex box, en y ajoutant des marge

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
         <!--End Option section -->
         <!--Start Commencez à coder section -->
-        <section>
+        <section class="beginCode">
             <div>
                 <img src="/image/Code editor (1).png" alt="code editor">
             </div>
@@ -126,13 +126,13 @@
         </section>
         <!--End Commencez à coder section -->
         <!--Start apprentissage section -->
-        <section>
+        <section class="startlearn">
             <div>
                 <h2>
                     Démarrez votre apprentissage
                 </h2>
             </div>
-            <div>
+            <div class="startlearn-items">
                 <article>
                     <h3>
                         HTML et HTML5 de base
