mis en forme du formulaire avec les flex box et mis de la bordure pour avoir une comprension profonde des marges

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <main>
         <!--Start Hero section -->
-        <section>
+        <section class="starthero">
             <!--  -->
             <div>
                 <div>
@@ -157,16 +157,16 @@
         </section>
         <!--End apprentissage section -->
         <!--Start Écrivez-nous section -->
-        <section>
-            <div>
+        <section class="whritter">
+            <div class="whritter-title">
                 <h2>
                     Écrivez-nous !
                 </h2>
             </div>
             <div>
-                <form>
-                    <div>
-                        <div>
+                <form class="whritter-form">
+                    <div class="whritter-form-items1">
+                        <div class="item1">
                             <div>
                                 <label for="nom">Votre nom</label>
                             </div>
@@ -183,7 +183,7 @@
                             </div>
                         </div>
                     </div>
-                    <div>
+                    <div class="whritter-form-items2">
                         <div>
                             <label for="message">Votre message</label>
                         </div>
