stylisation et mise en forme du formulaire

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <div>
                 <form class="whritter-form">
                     <div class="whritter-form-items1">
-                        <div class="item1">
+                        <div class="item">
                             <div>
                                 <label for="nom">Votre nom</label>
                             </div>
@@ -174,7 +174,7 @@
                                 <input type="text" name="nom" id="nom">
                             </div>
                         </div>
-                        <div>
+                        <div class="item">
                             <div>
                                 <label for="email">Votre email</label>
                             </div>
@@ -192,7 +192,7 @@
                         </div>
                     </div>
                     <div>
-                        <button>Envoyez votre message</button>
+                        <button class="submit">Envoyez votre message</button>
                     </div>
                 </form>
             </div>
