stylisation et ajustement du footer

--- a/index.html
+++ b/index.html
@@ -210,25 +210,25 @@
                 Commune de Ngaliema - Kinshasa
             </p>
         </div>
-        <div>
+        <div class="social">
             <div>
                 <a href="#">
-                    <img src="/image/facebook.svg" alt="logo facebook">
+                    <img class="link" src="/image/facebook.svg" alt="logo facebook">
                 </a>
             </div>
             <div>
                 <a href="#">
-                    <img src="/image/linkd'in.svg" alt="logo linkdin">
+                    <img class="link" src="/image/linkd'in.svg" alt="logo linkdin">
                 </a>
             </div>
             <div>
                 <a href="#">
-                    <img src="/image/twitter.svg" alt="logo x">
+                    <img class="link" src="/image/twitter.svg" alt="logo x">
                 </a>
             </div>
             <div>
                 <a href="#">
-                    <img src="/image/instgram.svg" alt="logo instagram">
+                    <img class="link" src="/image/instgram.svg" alt="logo instagram">
                 </a>
             </div>
         </div>
