ajustement des lien vers les pages au header

--- a/acceuil.html
+++ b/acceuil.html
@@ -16,10 +16,10 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#">Accueil</a>
+                    <a href="acceuil.html">Accueil</a>
                 </li>
                 <li>
-                    <a href="#">Nos cours</a>
+                    <a href="noscours.html">Nos cours</a>
                 </li>
             </ul>
         </nav>
