prefinissage du responsive design laptop et grand ecrans

--- a/acceuil.html
+++ b/acceuil.html
@@ -191,10 +191,11 @@
                             <textarea name="message" id="message"></textarea>
                         </div>
                     </div>
-                    <div>
-                        <button class="submit">Envoyez votre message</button>
-                    </div>
+                   
                 </form>
+                <div class="btn">
+                    <button class="submit">Envoyez votre message</button>
+                </div>
             </div>
         </section>
         <!--End Écrivez-nous section -->
