debut du responsive dsign tablette

--- a/acceuil.html
+++ b/acceuil.html
@@ -134,17 +134,17 @@
             </div>
             <div class="startlearn-items">
                 <article>
-                    <h3>
+                    <h3 class="courses">
                         HTML et HTML5 de base
                     </h3>
                 </article>
                 <article>
-                    <h3>
+                    <h3 class="courses">
                         Les bases du CSS
                     </h3>
                 </article>
                 <article>
-                    <h3>
+                    <h3 class="courses">
                         conception visuelle appliquée
                     </h3>
                 </article>
